Updated Appoinments logic